<resources>
    <string name="app_name">Uthayas app</string>

    <!-- Splash screen -->
    <string name="logo_lk">logo de lkdigital.eu</string>
    <string name="url_lk">lkdigital.eu</string>

    <!-- Main activity -->
    <string name="logo_uthaya">logo de uthaya.fr</string>
    <string name="title_app">Tamoul</string>
    <string name="sub_title_app">via le français</string>
    <string name="start">Démarrer</string>
    <string name="date">Le %s</string>
    <string name="copyright_app">suthayakumar©</string>
    <string name="version_name">V%s</string>

    <!-- Summary activity -->
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="tab1_summaryActivity">Leçons</string>
    <string name="tab2_summaryActivity">Vocabulaires</string>
    <string name="tab3_summaryActivity">Quizz</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Tab1 Lessons fragment -->
    <string name="say_hello">Icon se presenter</string>
    <string name="title_chap1">1. Se présenter</string>
    <string name="morning">Icon un matin</string>
    <string name="title_chap2">2. Un matin</string>
    <string name="market">Icon du marché</string>
    <string name="title_chap3">3. Au marché</string>
    <string name="at_gp">Icon chez le médecin</string>
    <string name="title_chap4">4. Chez le médecin</string>
    <string name="weather">Icon de la météo</string>
    <string name="title_chap5">5. Les temps</string>
    <string name="zoo">Icon du zoo</string>
    <string name="title_chap6">6. Au zoo</string>

    <!-- Other messages -->
    <string name="not_specified">Non spécifié</string>
    <string name="client_no">Client N°%s</string>
    <string name="client_info">Informations client</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
